--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Oitizzo.com</title>
+    <title>Oitizzo</title>
 </head>
 
 <body>
 <h1>This is my first Web Project..</h1>
+<h1>এখন এটা গিটে আপ ক্রা হয়েছে</h1>
 </body>
 
 </html>
