--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <h1>This is my first Web Project..</h1>
-<h1>এখন এটা গিটে আপ ক্রা হয়েছে</h1>
+<h1>এখন এটা গিটে আপ করা হয়েছে</h1>
 </body>
 
 </html>
